# last_letter_2

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  dependencies.rosinstall  package.xml
include/: Master.hpp  Model.hpp  (+4 more)
last_letter_2/: CMakeLists.txt  package.xml
last_letter_2/cfg/: PD_gains.cfg
last_letter_2/config/param/: HID.yaml  aerodynamics.yaml  environment.yaml  propulsion.yaml  simulation.yaml  updatePhysics.yaml  world.yaml
last_letter_2/config/param/aerosonde/: aerodynamics.yaml
last_letter_2/config/param/aircrafts/HCUAV/: aerodynamics.yaml
last_letter_2/config/param/aircrafts/csl_2k19/: aerodynamics.yaml  init.yaml  propulsion.yaml  rigidBody.yaml
last_letter_2/config/param/aircrafts/csl_2k19/urdf/: model.urdf.xacro
last_letter_2/config/param/aircrafts/csl_2k20/: aerodynamics.yaml  rigidBody.yaml
last_letter_2/config/param/aircrafts/csl_2k20/urdf/: model.urdf.xacro
last_letter_2/config/param/aircrafts/csl_2k21/: aerodynamics.yaml  propulsion.yaml
last_letter_2/config/param/aircrafts/csl_2k21/urdf/: model.urdf.xacro
last_letter_2/config/param/aircrafts/hexacopter/: aerodynamics.yaml  init.yaml  model.yaml  propulsion.yaml
last_letter_2/config/param/aircrafts/hexacopter/urdf/: model.urdf.xacro
last_letter_2/config/param/aircrafts/plane_1wing/: aerodynamics.yaml  propulsion.yaml
last_letter_2/config/param/aircrafts/plane_1wing/urdf/: can_model.urdf.xacro  model.urdf.xacro
last_letter_2/config/param/aircrafts/plane_1wing_sensors/: aerodynamics.yaml  init.yaml
last_letter_2/config/param/aircrafts/plane_1wing_sensors/urdf/: model.urdf.xacro
last_letter_2/config/param/aircrafts/plane_3wing/: aerodynamics.yaml  init.yaml  propulsion.yaml
last_letter_2/config/param/aircrafts/plane_3wing/urdf/: model.urdf.xacro
last_letter_2/config/param/aircrafts/quadcopter/: channel_mix.yaml  propulsion.yaml
last_letter_2/config/param/aircrafts/quadcopter/urdf/: model.urdf.xacro
last_letter_2/config/param/aircrafts/quadrotor/: aerodynamics.yaml  channel_mix.yaml  init.yaml  propulsion.yaml  rigidBody.yaml
last_letter_2/config/param/aircrafts/quadrotor/urdf/: model.urdf.xacro
last_letter_2/config/param/aircrafts/sensor_test_Robot/urdf/: model.urdf.xacro
last_letter_2/config/param/firefly_Y6/: aerodynamics.yaml
last_letter_2/config/param/meshes/: 4blade_prop.dae  4blade_prop_round.dae  a380.dae  box_engine.dae  propeller.dae  propeller_destroyed.dae  round engine.dae  whiteblack-airbus.dae
last_letter_2/config/param/meshes/csl_logo/: csl_logo.dae
last_letter_2/config/param/models/hexacopter/: channel_mix.yaml  init.yaml  model.yaml  propulsion.yaml
last_letter_2/config/param/models/hexacopter/urdf/: model.urdf.xacro
last_letter_2/config/param/models/plane_1wing/: aerodynamics.yaml  mass.yaml  propulsion.yaml
last_letter_2/config/param/models/plane_1wing/urdf/: model.urdf.xacro
last_letter_2/config/param/models/plane_1wing_sensors/: aerodynamics.yaml  channel_mix.yaml  init.yaml  model.yaml  propulsion.yaml
last_letter_2/config/param/models/plane_1wing_sensors/urdf/: model.urdf.xacro
last_letter_2/config/param/models/plane_3w_2m_electric/: aerodynamics.yaml  propulsion.yaml
last_letter_2/config/param/models/plane_3w_2m_electric/urdf/: model.urdf.xacro
last_letter_2/config/param/models/plane_3wing/: aerodynamics.yaml  channel_mix.yaml  init.yaml  propulsion.yaml
last_letter_2/config/param/models/plane_3wing/urdf/: model.urdf.xacro
last_letter_2/config/param/models/plane_3wing_2motor/: aerodynamics.yaml  init.yaml  propulsion.yaml
last_letter_2/config/param/models/plane_3wing_2motor/urdf/: model.urdf.xacro
last_letter_2/config/param/models/quadcopter/: aerodynamics.yaml  channel_mix.yaml  init.yaml  model.yaml  propulsion.yaml
last_letter_2/config/param/worlds/: myworld.world
last_letter_2/config/param/worlds/my_ground_plane/: model.sdf
last_letter_2/include/: aerodynamics.hpp  class_config.hpp  dynamics.hpp  environment.hpp  factory.hpp  last_letter_2_headers.hpp  last_letter_2_libs.hpp  master.hpp  model.hpp  propulsion.hpp
last_letter_2/include/aerodynamics/: HCUAVAero.hpp  aerodynamics.hpp  noAerodynamics.hpp  polyAero.hpp  stdLinearAero.hpp
last_letter_2/include/propulsion/: beardEngine.hpp  electricEngine.hpp  genericEngine.hpp  noEngine.hpp  propulsion.hpp
last_letter_2/launch/: profiling.launch  profilling.launch  simulation.launch
last_letter_2/models/aircraft/: plane.urdf  plane.urdf.xacro
last_letter_2/src/: aerodynamics.cpp  buttonFuncions.cpp  buttonFunctions.cpp  chan2basics.cpp  chan2srv.cpp  chan2srv_node.cpp  control_types.cpp  controller.1.cpp  controller.cpp  controller1.cpp  controller_mediator.cpp  controller_node.cpp  core.cpp  core_node.cpp  dynamics.cpp  environment.cpp  factory.cpp  joy2chan.cpp  joy2chan_node.cpp  master.cpp  model.cpp  propulsion.cpp  tf_listener.cpp
last_letter_2/src/aerodynamics/: HCUAVAero.cpp  aerodynamics.cpp  noAerodynamics.cpp  polyAero.cpp  stdLinearAero.cpp
last_letter_2/src/controllers/: hexacopter_contr_node.cpp  plane_contr_node.cpp  quadcopter_contr_node.cpp
last_letter_2/src/propulsion/: beardEngine.cpp  electricEngine.cpp  genericEngine.cpp  noEngine.cpp  propulsion.cpp
last_letter_2_gazebo_plugins/: CMakeLists.txt  package.xml
last_letter_2_gazebo_plugins/src/: model_plugin.cpp  world_plugin.cpp
last_letter_2_libs/: CMakeLists.txt  package.xml
last_letter_2_libs/include/last_letter_2_libs/: math_lib.hpp
last_letter_2_libs/src/: last_letter_2_libs.cpp  math_lib.cpp
last_letter_2_maths/: CMakeLists.txt  package.xml
last_letter_2_maths/src/: mathlib.cpp
last_letter_2_msgs/: CMakeLists.txt  package.xml
last_letter_2_msgs/msg/: aero_wrenches.msg  air_data.msg  channels.msg  joystick_input.msg  link_states.msg  model_inputs.msg  model_states.msg  prop_wrenches.msg
last_letter_2_msgs/srv/: airdata_srv.srv  apply_model_wrenches_srv.srv  apply_wrench_srv.srv  get_airfoil_inputs_srv.srv  get_control_inputs_srv.srv  get_control_signals_srv.srv  get_link_inputs_srv.srv  get_model_states_srv.srv  get_motor_input_srv.srv
(+51 files in other folders)
