<?xml version="1.0"?>
<package format="2">
    <name>last_letter_2</name>
    <version>0.0.0</version>
    <description>Last_letter simulator main code</description>

    <maintainer email="tailwhipx4@gmail.com">George Zogopoulos-Papaliakos</maintainer>


    <license>GPL-3.0</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>rosgraph_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>last_letter_2_msgs</build_depend>
    <build_depend>last_letter_2_libs</build_depend>
    <build_depend>kdl_parser</build_depend>

    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>rosgraph_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>last_letter_2_msgs</build_export_depend>
    <build_export_depend>last_letter_2_libs</build_export_depend>
    <build_export_depend>kdl_parser</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>rosgraph_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>last_letter_2_msgs</exec_depend>
    <exec_depend>last_letter_2_libs</exec_depend>
    <exec_depend>kdl_parser</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <!-- <gazebo_ros plugin_path="${prefix}/lib"	gazebo_media_path="${prefix}" /> -->
    </export>
</package>
