<?xml version="1.0"?>
<package format="2">
    <name>last_letter_2_gazebo_plugins</name>
    <version>0.0.0</version>
    <description>Pkg with Gazebo plugins, used in communication with ROS </description>

    <maintainer email="tailwhipx4@gmail.com">George Zogopoulos-Papaliakos</maintainer>
    <maintainer email="milistefanos@hotmail.com">Stefanos Miliotis</maintainer>

    <license>GPL-3.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>rosgraph_msgs</build_depend>
    <build_depend>last_letter_2_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rosgraph_msgs</build_export_depend>
    <build_export_depend>last_letter_2_msgs</build_export_depend>
    <build_export_depend>tf2_ros</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rosgraph_msgs</exec_depend>
    <exec_depend>last_letter_2_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
</package>
