<?xml version="1.0"?>
<package format="2">
    <name>last_letter_2_msgs</name>
    <version>0.0.0</version>
    <description>Package with all msgs and srvs used in Simulator</description>

    <maintainer email="tailwhipx4@gmail.com">George Zogopoulos-Papaliakos</maintainer>
    <maintainer email="milistefanos@hotmail.com">Stefanos Miliotis</maintainer>

    <license>GPL-3.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <build_depend>rosgraph_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>

    <build_export_depend>rosgraph_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

</package>
